// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MetricQueryBuilder snapshot: core queries matches snapshot for a field-reference query across tables 1`] = `
"SELECT
  "table1".dim1 + "table2".dim2 AS "table1_with_reference"
FROM
  "db"."schema"."table1" AS "table1"
  LEFT OUTER JOIN "db"."schema"."table2" AS "table2" ON ("table1".shared) = ("table2".shared)
GROUP BY
  1
ORDER BY
  "table1_with_reference"
LIMIT
  10"
`;

exports[`MetricQueryBuilder snapshot: core queries matches snapshot for a metric query across two tables 1`] = `
"WITH
  metrics AS (
    SELECT
      "table1".dim1 AS "table1_dim1",
      MAX("table2".number_column) AS "table2_metric2"
    FROM
      "db"."schema"."table1" AS "table1"
      LEFT OUTER JOIN "db"."schema"."table2" AS "table2" ON ("table1".shared) = ("table2".shared)
    GROUP BY
      1
  )
SELECT
  *,
  table1_dim1 + table2_metric2 AS "calc3"
FROM
  metrics
ORDER BY
  "table2_metric2" DESC
LIMIT
  10"
`;

exports[`MetricQueryBuilder snapshot: core queries matches snapshot for a metric-only query without default sorting 1`] = `
"WITH
  metrics AS (
    SELECT
      MAX("table1".number_column) AS "table1_metric1"
    FROM
      "db"."schema"."table1" AS "table1"
  )
SELECT
  *,
  table1_dim1 + table1_metric1 AS "calc3"
FROM
  metrics
LIMIT
  10"
`;

exports[`MetricQueryBuilder snapshot: core queries matches snapshot for a query with additional metrics 1`] = `
"WITH
  metrics AS (
    SELECT
      "table1".dim1 AS "table1_dim1",
      MAX("table2".number_column) AS "table2_additional_metric"
    FROM
      "db"."schema"."table1" AS "table1"
      LEFT OUTER JOIN "db"."schema"."table2" AS "table2" ON ("table1".shared) = ("table2".shared)
    GROUP BY
      1
  )
SELECT
  *,
  table1_dim1 + table2_additional_metric AS "calc3"
FROM
  metrics
ORDER BY
  "table2_additional_metric" DESC
LIMIT
  10"
`;

exports[`MetricQueryBuilder snapshot: core queries matches snapshot for a simple metric query 1`] = `
"WITH
  metrics AS (
    SELECT
      "table1".dim1 AS "table1_dim1",
      MAX("table1".number_column) AS "table1_metric1"
    FROM
      "db"."schema"."table1" AS "table1"
    GROUP BY
      1
  )
SELECT
  *,
  table1_dim1 + table1_metric1 AS "calc3"
FROM
  metrics
ORDER BY
  "table1_metric1" DESC
LIMIT
  10"
`;

exports[`MetricQueryBuilder snapshot: core queries matches snapshot for a simple metric query in BigQuery 1`] = `
"WITH
  metrics AS (
    SELECT
      \`table1\`.dim1 AS \`table1_dim1\`,
      MAX(\`table1\`.number_column) AS \`table1_metric1\`
    FROM
      \`db\`.\`schema\`.\`table1\` AS \`table1\`
    GROUP BY
      1
  )
SELECT
  *,
  table1_dim1 + table1_metric1 AS \`calc3\`
FROM
  metrics
ORDER BY
  \`table1_metric1\` DESC
LIMIT
  10"
`;

exports[`MetricQueryBuilder snapshot: core queries matches snapshot for an all-join-types intermediary chain query 1`] = `
"SELECT
  "table5".dim1 AS "table5_dim1",
  MAX("table5".number_column) AS "table5_metric1"
FROM
  "db"."schema"."table1" AS "table1"
  INNER JOIN "db"."schema"."table2" AS "table2" ON ("table2".col) = ("table1".col)
  FULL OUTER JOIN "db"."schema"."table3" AS "table3" ON ("table3".col) = ("table2".col)
  LEFT OUTER JOIN "db"."schema"."table4" AS "table4" ON ("table4".col) = ("table3".col)
  RIGHT OUTER JOIN "db"."schema"."table5" AS "table5" ON ("table5".col) = ("table4".col)
GROUP BY
  1
ORDER BY
  "table5_metric1" DESC
LIMIT
  5"
`;

exports[`MetricQueryBuilder snapshot: core queries matches snapshot for an intermediary join-chain query 1`] = `
"SELECT
  "table5".dim1 AS "table5_dim1",
  MAX("table5".number_column) AS "table5_metric1"
FROM
  "db"."schema"."table1" AS "table1"
  LEFT OUTER JOIN "db"."schema"."table2" AS "table2" ON ("table2".col) = ("table1".col)
  LEFT OUTER JOIN "db"."schema"."table3" AS "table3" ON ("table3".col) = ("table2".col)
  LEFT OUTER JOIN "db"."schema"."table4" AS "table4" ON ("table4".col) = ("table3".col)
  LEFT OUTER JOIN "db"."schema"."table5" AS "table5" ON ("table5".col) = ("table4".col)
GROUP BY
  1
ORDER BY
  "table5_metric1" DESC
LIMIT
  5"
`;
